src/test/resources/syntax/invalid/method_name_angled_brackets_incorrect.unpick
unpick v3
target_method foo.Bar <bar> ()V